# crm-messaging-investigation

./: .gitignore  Makefile  README.md  pyproject.toml
crm_messaging_investigation/functions/: utils.py
crm_messaging_investigation/investigation_campaigns/: campaign_apple.py  campaign_samsung.py  campaign_sansung.py
crm_messaging_investigation/raw_exploratory_bases/: exploratory_campaigns.py  exploratory_conversation.py  exploratory_logs.py
