[project]
name = "crm-messaging-investigation"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Vinicius",email = "gvcintraribeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "duckdb (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
